--- a/index.html.html
+++ b/index.html.html
@@ -7,7 +7,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>INFOTEC</title>
+        <title>INFOlab</title>
         <style>
             body{
             margin: 0px;
